--- a/index.html
+++ b/index.html
@@ -715,10 +715,39 @@
             Net sınırlar (kritik)
           </h3>
           <ul class="list">
-            <li><b>Bot avukat değildir;</b> kesin sonuç/garanti vermez.</li>
-            <li><b>Hassas verileri</b> (TCKN/IBAN vb.) paylaşmamayı uyarır.</li>
-            <li>Dosyaya göre değişen konularda sınırı korur, <b>görüşme randevusuna yönlendirir.</b></li>
+          <li><b>Bu asistan bir avukat değildir;</b> hukuki danışmanlık sunmaz, kesin sonuç veya garanti vermez.</li>
+<li><b>Genel bilgilendirme amaçlıdır;</b> dosya özelinde değerlendirme için avukat görüşüne yönlendirir.</li>
+<li><b>Strateji, taktik veya yönlendirme</b> (ne yapılmalı / nasıl savunulmalı vb.) önermez.</li>
+<li><b>Dilekçe, itiraz veya resmi belge</b> hazırlamaz; bu süreçler avukat incelemesi gerektirir.</li>
+<li><b>Hassas kişisel verilerin</b> (TCKN, IBAN, adres vb.) paylaşılmasını özellikle engeller.</li>
+<li><b>Süreler ve sonuçlar</b> dosyaya göre değişebileceğinden kesin tarih veya bağlayıcı bilgi vermez.</li>
+<li><b>Randevu oluşturmaz;</b> yalnızca talebi ve iletilen bilgileri ilgili ekibe aktarır.</li>
+<li><b>Yetersiz veya belirsiz durumlarda</b> bilgi uydurmaz; netlik için görüşme önerir.</li>
           </ul>
+          <hr class="hr">
+
+<p style="margin-top:10px; color:var(--muted); font-size:13.6px; line-height:1.6;">
+  <b>Amaç:</b><br>
+  Ziyaretçiyi doğru şekilde bilgilendirmek, konusunu netleştirmesine yardımcı olmak ve
+  gerekli görüldüğünde ekibe düzenli, anlaşılır bir talep iletmektir.
+</p>
+
+<p style="margin-top:8px; color:var(--muted); font-size:13.6px; line-height:1.6;">
+  Bu asistan yalnızca talep toplayan bir sistem değildir. Aynı zamanda ziyaretçiye
+  <b>canlı destek hissi</b> verir, hukuk alanına dair <b>genel ve yönlendirici bilgiler sunar</b>.
+  Randevu almak istemeyen kullanıcıların da konu hakkında fikir sahibi olmasını sağlar.
+</p>
+
+<p style="margin-top:8px; color:var(--muted); font-size:13.6px; line-height:1.6;">
+  Böylece hem ziyaretçi hem de hukuk bürosu için <b>ilk temas yükünü azaltan</b>,
+  süreci daha verimli hale getiren bir dijital danışma noktası olarak çalışır.
+</p>
+
+<p style="margin-top:10px; font-size:13.4px; color:rgba(255,255,255,.9);">
+  <i>İlk temasın yükünü alan, doğru soruları soran ve gerektiğinde insan desteğine yönlendiren
+  akıllı bir ön danışma asistanı.</i>
+</p>
+
         </div>
 
         <div class="card" id="ornek-mail">
@@ -749,7 +778,7 @@
 
               <hr class="hr">
               <div style="color: var(--muted); font-size: 12.8px;">
-                Not: Bot hukuki danışmanlık vermez; ziyaretçiyi görüşmeye yönlendirmek için temel bilgi toplar.
+                Not: Bot hukuki danışmanlık vermez; ziyaretçiyi görüşmeye yönlendirmek için temel bilgi toplar, bilgiyi size iletir. Genel bilgi almak isteyen kullanıcılarada yardımcı olur ofisi ve sizi gereksiz iletiler, aramalar ve gereksiz iş yükünden kurtarır.
               </div>
             </div>
           </div>
@@ -760,14 +789,14 @@
     <!-- FAQ -->
     <div class="panel section" id="sss">
       <h2>SSS</h2>
-      <p class="lead">Müşterinin kafasındaki itirazları hızlıca temizleyen bölüm. (İstersen bunu daha da uzatırız.)</p>
+
 
       <details class="faq">
         <summary>
-          “Ücret söyler mi?”
+          “Asistan ücret belirtir mi?”
           <span class="chev">⌄</span>
         </summary>
-        <p>Rakam vermez; “dosyaya göre değişir” çerçevesini kurar ve görüşme/randevu yönlendirmesi yapar.</p>
+        <p>Fiyat vermez; “dosyaya göre değişir” çerçevesini kurar ve görüşme/randevu yönlendirmesi yapar. Kesinlikle herhangi bir fiyat vermez.</p>
       </details>
 
       <details class="faq">
@@ -775,15 +804,15 @@
           “Hangi alanlarda cevap verir?”
           <span class="chev">⌄</span>
         </summary>
-        <p>Genel bilgilendirme + ofisinizin hizmet alanlarına göre özelleştirilir (ör: iş, icra, aile, ceza vb.).</p>
+        <p>Asistan, hukuk ve dava süreçleri hakkında temel ve genel bilgilere sahiptir ve bunları kullanıcıya sunar. + ofisinizin hizmet alanlarına göre özelleştirilir (ör: iş, icra, aile, ceza vb.).</p>
       </details>
 
       <details class="faq">
         <summary>
-          “Kurulum kaç sürer?”
+          “Kurulum ne kadar sürer?”
           <span class="chev">⌄</span>
         </summary>
-        <p>Web sitenize tek satır kod (widget) ile eklenir. İstenirse renk/başlık/karşılama metni marka tonunuza göre ayarlanır.</p>
+        <p>Web sitenize tek satır kod (widget) ile eklenir, bu işlem 5-10dk sürmektedir. İstenirse renk/başlık/karşılama metni marka tonunuza göre ayarlanır.Firmaya ait bilgilerin toparlanamsı ve asistana girilmesiyle toplam kurulum zamanı 1-3 gündür.</p>
       </details>
 
       <!-- Yeni eklenenler -->
@@ -792,7 +821,7 @@
           “Bot yanlış yönlendirirse ne olur?”
           <span class="chev">⌄</span>
         </summary>
-        <p>Bot kesin hüküm kurmaz; riski azaltmak için “genel bilgilendirme” sınırında kalır ve kritik noktalarda randevuya yönlendirir. (Bu metinleri daha da netleştirebiliriz.)</p>
+        <p>Bot kesin hüküm kurmaz; riski azaltmak için “genel bilgilendirme” sınırında kalır ve kritik noktalarda kullanıcıya isteğini yerine getiremeyeceğini, farklı konuda yardım edebileceğini belirtir ve randevuya yönlendirir.</p>
       </details>
 
       <details class="faq">
@@ -800,7 +829,7 @@
           “KVKK / hassas veri tarafı nasıl yönetiliyor?”
           <span class="chev">⌄</span>
         </summary>
-        <p>Bot sohbet sırasında hassas veri (TCKN/IBAN vb.) paylaşılmaması için uyarı verir ve yalnızca temel randevu bilgilerini toplamaya odaklanır.</p>
+        <p>Bot sohbet sırasında hassas veri (TCKN/IBAN vb.) paylaşılmaması için uyarı verir ve yalnızca temel randevu bilgilerini toplamaya odaklanır. Özel bilgiler asistana gönderilse bile asistan kullanıcıya bunları göndermemesini söyler ve sadece ilgili kısımları kaydeder.</p>
       </details>
 
       <details class="faq">
@@ -816,11 +845,11 @@
     <div class="panel cta" id="teklif">
       <div>
         <h3>Web sitenize ekleyelim, randevu talepleri düzenli gelsin.</h3>
-        <p>Canlı demoyu sağ alttan açıp test edebilirsin. İstersen sayfana uygun renk/başlık ve hizmet alanlarını da birlikte netleştiririz.</p>
+        <p>Canlı demoyu sağ alttan açıp test edebilirsiniz. İsterseniz sayfanıza uygun renk/başlık ve hizmet alanları da değişebilir.</p>
       </div>
       <div style="display:flex; gap:10px; flex-wrap:wrap;">
         <button class="btn primary" type="button" id="openDemoBottom">Canlı demo iste</button>
-        <a class="btn" href="#" onclick="alert('Bu butonu form sayfana/WhatsApp’a değil, teklif formuna bağlayacaksın.'); return false;">Fiyat teklifi al</a>
+        <a class="btn" href="https://wa.me/05469196959" >Fiyat teklifi al</a>
       </div>
     </div>
 
